// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PhonemeEngine > Regression Contract (Corpus Sample) > keeps analyzeDeep output stable for a deterministic corpus sample 1`] = `
{
  "baseline": [
    {
      "extendedRhymeKeys": [
        "EH-open",
      ],
      "rhymeKey": "EH-open",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "TH",
          "stress": 1,
          "vowel": "EH1",
          "vowelFamily": "EH",
        },
      ],
      "word": "THE",
    },
    {
      "extendedRhymeKeys": [
        "AH-V",
      ],
      "rhymeKey": "AH-V",
      "stressPattern": "0",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "V",
          "index": 0,
          "onset": "",
          "stress": 0,
          "vowel": "AH0",
          "vowelFamily": "AH",
        },
      ],
      "word": "OF",
    },
    {
      "extendedRhymeKeys": [
        "AH-ND",
      ],
      "rhymeKey": "AH-ND",
      "stressPattern": "0",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "ND",
          "index": 0,
          "onset": "",
          "stress": 0,
          "vowel": "AH0",
          "vowelFamily": "AH",
        },
      ],
      "word": "AND",
    },
    {
      "extendedRhymeKeys": [
        "AH-open",
      ],
      "rhymeKey": "AH-open",
      "stressPattern": "0",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "T",
          "stress": 0,
          "vowel": "AH0",
          "vowelFamily": "AH",
        },
      ],
      "word": "TO",
    },
    {
      "extendedRhymeKeys": [
        "IH-N",
      ],
      "rhymeKey": "IH-N",
      "stressPattern": "0",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "N",
          "index": 0,
          "onset": "",
          "stress": 0,
          "vowel": "IH0",
          "vowelFamily": "IH",
        },
      ],
      "word": "IN",
    },
    {
      "extendedRhymeKeys": [
        "EH-open",
      ],
      "rhymeKey": "EH-open",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "H",
          "stress": 1,
          "vowel": "EH1",
          "vowelFamily": "EH",
        },
      ],
      "word": "HE",
    },
    {
      "extendedRhymeKeys": [
        "AE-T",
      ],
      "rhymeKey": "AE-T",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "T",
          "index": 0,
          "onset": "TH",
          "stress": 1,
          "vowel": "AE1",
          "vowelFamily": "AE",
        },
      ],
      "word": "THAT",
    },
    {
      "extendedRhymeKeys": [
        "AE-S",
      ],
      "rhymeKey": "AE-S",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "S",
          "index": 0,
          "onset": "W",
          "stress": 1,
          "vowel": "AE1",
          "vowelFamily": "AE",
        },
      ],
      "word": "WAS",
    },
    {
      "extendedRhymeKeys": [
        "IH-T",
      ],
      "rhymeKey": "IH-T",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "T",
          "index": 0,
          "onset": "",
          "stress": 1,
          "vowel": "IH1",
          "vowelFamily": "IH",
        },
      ],
      "word": "IT",
    },
    {
      "extendedRhymeKeys": [
        "AW-open",
      ],
      "rhymeKey": "AW-open",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "Y",
          "stress": 1,
          "vowel": "AW1",
          "vowelFamily": "AW",
        },
      ],
      "word": "YOU",
    },
    {
      "extendedRhymeKeys": [
        "IH-S",
      ],
      "rhymeKey": "IH-S",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "S",
          "index": 0,
          "onset": "H",
          "stress": 1,
          "vowel": "IH1",
          "vowelFamily": "IH",
        },
      ],
      "word": "HIS",
    },
    {
      "extendedRhymeKeys": [
        "IH-S",
      ],
      "rhymeKey": "IH-S",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "S",
          "index": 0,
          "onset": "",
          "stress": 1,
          "vowel": "IH1",
          "vowelFamily": "IH",
        },
      ],
      "word": "IS",
    },
    {
      "extendedRhymeKeys": [
        "IH-TH",
      ],
      "rhymeKey": "IH-TH",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "TH",
          "index": 0,
          "onset": "W",
          "stress": 1,
          "vowel": "IH1",
          "vowelFamily": "IH",
        },
      ],
      "word": "WITH",
    },
    {
      "extendedRhymeKeys": [
        "AA-R",
      ],
      "rhymeKey": "AA-R",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "R",
          "index": 0,
          "onset": "F",
          "stress": 1,
          "vowel": "AA1",
          "vowelFamily": "AA",
        },
      ],
      "word": "FOR",
    },
    {
      "extendedRhymeKeys": [
        "EH-R",
      ],
      "rhymeKey": "EH-R",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "R",
          "index": 0,
          "onset": "H",
          "stress": 1,
          "vowel": "EH1",
          "vowelFamily": "EH",
        },
      ],
      "word": "HER",
    },
    {
      "extendedRhymeKeys": [
        "EH-open",
      ],
      "rhymeKey": "EH-open",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "SH",
          "stress": 1,
          "vowel": "EH1",
          "vowelFamily": "EH",
        },
      ],
      "word": "SHE",
    },
    {
      "extendedRhymeKeys": [
        "AA-N",
      ],
      "rhymeKey": "AA-N",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "N",
          "index": 0,
          "onset": "",
          "stress": 1,
          "vowel": "AA1",
          "vowelFamily": "AA",
        },
      ],
      "word": "ON",
    },
    {
      "extendedRhymeKeys": [
        "AE-S",
      ],
      "rhymeKey": "AE-S",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "S",
          "index": 0,
          "onset": "",
          "stress": 1,
          "vowel": "AE1",
          "vowelFamily": "AE",
        },
      ],
      "word": "AS",
    },
    {
      "extendedRhymeKeys": [
        "AA-T",
      ],
      "rhymeKey": "AA-T",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "T",
          "index": 0,
          "onset": "N",
          "stress": 1,
          "vowel": "AA1",
          "vowelFamily": "AA",
        },
      ],
      "word": "NOT",
    },
    {
      "extendedRhymeKeys": [
        "AE-T",
      ],
      "rhymeKey": "AE-T",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "T",
          "index": 0,
          "onset": "",
          "stress": 1,
          "vowel": "AE1",
          "vowelFamily": "AE",
        },
      ],
      "word": "AT",
    },
    {
      "extendedRhymeKeys": [
        "AY-open",
      ],
      "rhymeKey": "AY-open",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "M",
          "stress": 1,
          "vowel": "AY1",
          "vowelFamily": "AY",
        },
      ],
      "word": "MY",
    },
    {
      "extendedRhymeKeys": [
        "AE-D",
      ],
      "rhymeKey": "AE-D",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "D",
          "index": 0,
          "onset": "H",
          "stress": 1,
          "vowel": "AE1",
          "vowelFamily": "AE",
        },
      ],
      "word": "HAD",
    },
    {
      "extendedRhymeKeys": [
        "AH-T",
      ],
      "rhymeKey": "AH-T",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "T",
          "index": 0,
          "onset": "B",
          "stress": 1,
          "vowel": "AH1",
          "vowelFamily": "AH",
        },
      ],
      "word": "BUT",
    },
    {
      "extendedRhymeKeys": [
        "EH-open",
      ],
      "rhymeKey": "EH-open",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "B",
          "stress": 1,
          "vowel": "EH1",
          "vowelFamily": "EH",
        },
      ],
      "word": "BE",
    },
  ],
  "words": [
    "the",
    "of",
    "and",
    "to",
    "in",
    "he",
    "that",
    "was",
    "it",
    "you",
    "his",
    "is",
    "with",
    "for",
    "her",
    "she",
    "on",
    "as",
    "not",
    "at",
    "my",
    "had",
    "but",
    "be",
  ],
}
`;

exports[`PhonemeEngine > Regression Contract (Corpus Sample) > keeps analyzeWord output stable for a deterministic corpus sample 1`] = `
{
  "baseline": [
    {
      "coda": null,
      "phonemes": [
        "TH",
        "EH1",
      ],
      "rhymeKey": "EH-open",
      "syllableCount": 1,
      "vowelFamily": "EH",
      "word": "THE",
    },
    {
      "coda": "V",
      "phonemes": [
        "AH0",
        "V",
      ],
      "rhymeKey": "AH-V",
      "syllableCount": 1,
      "vowelFamily": "AH",
      "word": "OF",
    },
    {
      "coda": "ND",
      "phonemes": [
        "AH0",
        "N",
        "D",
      ],
      "rhymeKey": "AH-ND",
      "syllableCount": 1,
      "vowelFamily": "AH",
      "word": "AND",
    },
    {
      "coda": null,
      "phonemes": [
        "T",
        "AH0",
      ],
      "rhymeKey": "AH-open",
      "syllableCount": 1,
      "vowelFamily": "AH",
      "word": "TO",
    },
    {
      "coda": "N",
      "phonemes": [
        "IH0",
        "N",
      ],
      "rhymeKey": "IH-N",
      "syllableCount": 1,
      "vowelFamily": "IH",
      "word": "IN",
    },
    {
      "coda": null,
      "phonemes": [
        "H",
        "EH1",
      ],
      "rhymeKey": "EH-open",
      "syllableCount": 1,
      "vowelFamily": "EH",
      "word": "HE",
    },
    {
      "coda": "T",
      "phonemes": [
        "TH",
        "AE1",
        "T",
      ],
      "rhymeKey": "AE-T",
      "syllableCount": 1,
      "vowelFamily": "AE",
      "word": "THAT",
    },
    {
      "coda": "S",
      "phonemes": [
        "W",
        "AE1",
        "S",
      ],
      "rhymeKey": "AE-S",
      "syllableCount": 1,
      "vowelFamily": "AE",
      "word": "WAS",
    },
    {
      "coda": "T",
      "phonemes": [
        "IH1",
        "T",
      ],
      "rhymeKey": "IH-T",
      "syllableCount": 1,
      "vowelFamily": "IH",
      "word": "IT",
    },
    {
      "coda": null,
      "phonemes": [
        "Y",
        "AW1",
      ],
      "rhymeKey": "AW-open",
      "syllableCount": 1,
      "vowelFamily": "AW",
      "word": "YOU",
    },
    {
      "coda": "S",
      "phonemes": [
        "H",
        "IH1",
        "S",
      ],
      "rhymeKey": "IH-S",
      "syllableCount": 1,
      "vowelFamily": "IH",
      "word": "HIS",
    },
    {
      "coda": "S",
      "phonemes": [
        "IH1",
        "S",
      ],
      "rhymeKey": "IH-S",
      "syllableCount": 1,
      "vowelFamily": "IH",
      "word": "IS",
    },
    {
      "coda": "TH",
      "phonemes": [
        "W",
        "IH1",
        "TH",
      ],
      "rhymeKey": "IH-TH",
      "syllableCount": 1,
      "vowelFamily": "IH",
      "word": "WITH",
    },
    {
      "coda": "R",
      "phonemes": [
        "F",
        "AA1",
        "R",
      ],
      "rhymeKey": "AA-R",
      "syllableCount": 1,
      "vowelFamily": "AA",
      "word": "FOR",
    },
    {
      "coda": "R",
      "phonemes": [
        "H",
        "EH1",
        "R",
      ],
      "rhymeKey": "EH-R",
      "syllableCount": 1,
      "vowelFamily": "EH",
      "word": "HER",
    },
    {
      "coda": null,
      "phonemes": [
        "SH",
        "EH1",
      ],
      "rhymeKey": "EH-open",
      "syllableCount": 1,
      "vowelFamily": "EH",
      "word": "SHE",
    },
    {
      "coda": "N",
      "phonemes": [
        "AA1",
        "N",
      ],
      "rhymeKey": "AA-N",
      "syllableCount": 1,
      "vowelFamily": "AA",
      "word": "ON",
    },
    {
      "coda": "S",
      "phonemes": [
        "AE1",
        "S",
      ],
      "rhymeKey": "AE-S",
      "syllableCount": 1,
      "vowelFamily": "AE",
      "word": "AS",
    },
    {
      "coda": "T",
      "phonemes": [
        "N",
        "AA1",
        "T",
      ],
      "rhymeKey": "AA-T",
      "syllableCount": 1,
      "vowelFamily": "AA",
      "word": "NOT",
    },
    {
      "coda": "T",
      "phonemes": [
        "AE1",
        "T",
      ],
      "rhymeKey": "AE-T",
      "syllableCount": 1,
      "vowelFamily": "AE",
      "word": "AT",
    },
    {
      "coda": null,
      "phonemes": [
        "M",
        "AY1",
      ],
      "rhymeKey": "AY-open",
      "syllableCount": 1,
      "vowelFamily": "AY",
      "word": "MY",
    },
    {
      "coda": "D",
      "phonemes": [
        "H",
        "AE1",
        "D",
      ],
      "rhymeKey": "AE-D",
      "syllableCount": 1,
      "vowelFamily": "AE",
      "word": "HAD",
    },
    {
      "coda": "T",
      "phonemes": [
        "B",
        "AH1",
        "T",
      ],
      "rhymeKey": "AH-T",
      "syllableCount": 1,
      "vowelFamily": "AH",
      "word": "BUT",
    },
    {
      "coda": null,
      "phonemes": [
        "B",
        "EH1",
      ],
      "rhymeKey": "EH-open",
      "syllableCount": 1,
      "vowelFamily": "EH",
      "word": "BE",
    },
  ],
  "words": [
    "the",
    "of",
    "and",
    "to",
    "in",
    "he",
    "that",
    "was",
    "it",
    "you",
    "his",
    "is",
    "with",
    "for",
    "her",
    "she",
    "on",
    "as",
    "not",
    "at",
    "my",
    "had",
    "but",
    "be",
  ],
}
`;
